fix trashcan layout issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -143,7 +143,8 @@
     .panel h1 {
         outline: 1px solid #444;
         margin: 0;
-        padding: 10px;
+        padding: 0px 10px;
+        line-height: 40px;
         background-color: #333;
     }
     .panel h1.error {
@@ -154,4 +155,8 @@
     .panel table {
         margin: 1em 10px;
     }
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    line-height: inherit;
 }
